--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
     "nodemon": "^2.0.19"
@@ -9,7 +10,6 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "type": "module",
   "scripts": {
     "start": "nodemon index.js"
@@ -19,4 +19,3 @@
   "license": "ISC",
   "description": ""
 }
-
